--- a/2023-23/style.scss
+++ b/2023-23/style.scss
@@ -22,25 +22,24 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; 
-  background-color: $dark-blue;
+  background: 
+    linear-gradient(lighten($dark-blue, 20%), lighten($dark-blue, 15%)) 0vw 0vh  / 100vw 100vh no-repeat;
 }
 
 
 
-$box-w: -6vmin;
-$box-h: -19vmin;
+$box-w: 25vmin;
+$box-h: 5vmin;
 
 
 div.fake {
-    width: 55vmin;
-    height: 55vmin;
-    border-radius: 90%;
-    left: -30vmin;
+    width: 80vmin;
+    height: 80vmin;
+    transform:scale(1.1);
+    border: solid 1.5vmin $biege;
+    border-radius: 4vmin;
     display: flex;
     margin: 0 auto;
-    border: solid 15px $biege;
-    //transform: scale(1.5);
-    //opacity: 0.7;
     position: relative; 
     background: 
       
@@ -201,42 +200,56 @@ div.fake {
        radial-gradient(ellipse, $black 8vmin, transparent 1vmin) calc(#{$box-w} + 25vmin) calc(#{$box-h} + 55vmin)  / 16vmin 12vmin no-repeat, 
       
       
-       linear-gradient(20deg, $black  20vmin, transparent 1vmin) calc(#{$box-w} + 38vmin) calc(#{$box-h} + 58vmin)  / 30vmin 20vmin no-repeat,
-       linear-gradient(-20deg, $black 27vmin, transparent 1vmin) calc(#{$box-w} + 9vmin) calc(#{$box-h} + 58vmin)  / 30vmin 22vmin no-repeat,
+       linear-gradient(20deg, $black  22vmin, transparent 1vmin) calc(#{$box-w} + 38vmin) calc(#{$box-h} + 56vmin)  / 17vmin 24vmin no-repeat,
+       linear-gradient(70deg, $black  6vmin, transparent 1vmin) calc(#{$box-w} + 55vmin) calc(#{$box-h} + 61vmin)  / 15vmin 20vmin no-repeat,
+      
+       linear-gradient(-25deg, $black 27vmin, transparent 1vmin) calc(#{$box-w} + 14vmin) calc(#{$box-h} + 58vmin)  / 25vmin 22vmin no-repeat,
       
       
-       /* bg */
-       linear-gradient($light-blue 0vmin, $light-blue 25vmin) calc(#{$box-w} + 0vmin) calc(#{$box-h} + 0vmin)  / 100vmin 100vmin no-repeat,
+       linear-gradient(-70deg, $black  7.5vmin, transparent 1vmin) calc(#{$box-w} + -.5vmin) calc(#{$box-h} + 62vmin)  / 15vmin 20vmin no-repeat,
+      
+    linear-gradient($light-blue 0vmin, lighten($light-blue, 15%) 25vmin) 0vw 0vh  / 100vw 100vh no-repeat;
+      
+      
+      
 }
 
 
 div.fake:after {
-    width: 55vmin;
+    width: 45vmin;
     height: 60vmin;
-    left: 60vmin;
-    top: -10vmin;
-    font-size: 7.5vmin;
+    left: -5vmin;
+    top: -5vmin;
+    font-size: 5.5vmin;
+    padding: 3vmin;
     font-weight: 600;
+    border-radius: 4vmin;
     letter-spacing: .025vmin;
-    text-shadow: .75vmin .75vmin.5vmin darken($dark-blue, 10%);
+    text-shadow: .5vmin .5vmin .5vmin darken($white, 15%);
     font-family: 'Oswald', sans-serif;
-    color: $biege;
+    color: $dark-blue;
     content: 'THE PROBLEM WITH QUOTES FOUND ON THE INTERNET IS THAT THEY ARE OFTEN NOT TRUE.';
-    //background: 
+    background: 
+      
+    linear-gradient($white 0vmin, lighten($white, 15%) 25vmin) 0 0  / 100vw 100vh no-repeat;
 }
       
 div.fake:before {
-    width: 45vmin;
-    height: 10vmin;
-    left: 60vmin;
-    top: 58vmin;
-    font-size: 4.5vmin;
+    width: 40vmin;
+    height: 20vmin;
+    left: -2vmin;
+    top: 47vmin;
+    font-size: 3.5vmin;
     font-weight: 300;
+    transform:scale(1);
     z-index: 999;
-    color: darken($biege, 10%);
-    opacity: 0.7;
+    color: darken($white, 40%);
     font-family: 'Oswald', sans-serif;
     content: '~ Abraham Lincoln';
+  
+    background: 
+      
+    radial-gradient(ellipse at 110% 0%, $white 5vmin, $white 10vmin, transparent 10vmin) 12vmin 6vmin  / 25vmin 15vmin no-repeat;
     
 }
      
