--- a/style.css
+++ b/style.css
@@ -1,47 +1,87 @@
 body {
   font-family: poppins, sans-serif;
+  background: radial-gradient(#ededed, #c6c6c6);
 }
 
-header {
-  background-color: #333;
-  color: #bbb;
+header { 
+  color: #555;
   text-transform: uppercase;
   padding: 0.5rem;
-  margin-bottom: 1vmin;
+  margin-bottom: 0vmin;
+  padding-left: 5vmin;
+  margin-top: 3vmin;
+  font-size: 3vmin;
 }
 
 header a, header a:visited {
-  color: #eee;
+  color: #555;
   text-decoration: none;
 }
 
 header a:hover, header a:active {
-  color: #fff;
+  color: #222;
   text-decoration: underline;
 }
 
 main.grid {
-  max-width: 100vw;
+  max-width: 90vw;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 2vmin;
-  grid-row-gap: 2vmin;
+  grid-column-gap: 5vmin;
+  grid-row-gap: 5vmin;
 }
+
+
+iframe {
+  background-color:#eaeaea;
+  border:solid 5vmin #444;
+  border-bottom-color:#333;
+  border-left-color:#444;
+  border-radius:2px;
+  border-right-color:#444;
+  border-top-color:#333;
+  box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
+  box-sizing:border-box;
+  display:inline-block;  
+  margin: 0vmin 5vmin;
+  padding: 7.5vmin;
+  position: relative;
+  text-align: center;  
+  aspect-ratio: 5/4;
+  min-height: 70vmin;
+}
+iframe:before {
+    border-radius:2px;
+    bottom:-2vmin;
+    box-shadow:0 2px 5px 0 rgba(0,0,0,.25) inset;
+    content:"";
+    left:-2vmin;
+    position:absolute;
+    right:-2vmin;
+    top:-2vmin;
+}
+iframe:after {
+    border-radius:2px;
+    bottom:-2.5vmin;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.25);
+    content:"";
+    left:-2.5vmin;
+    position:absolute;
+    right:-2.5vmin;
+    top:-2.5vmin;
+}
+
 
 @media (max-width: 1100px) {
   main.grid {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
   }
+  iframe {
+    min-height: 80vmin;
+  }
 }
 
-iframe {
-  height: 55vmin;
-}
-
-iframe:nth-child(9n-2) {
-  grid-column: 1 / -1;
-}
 /*# sourceMappingURL=style.css.map */
