--- a/2023-19/style.scss
+++ b/2023-19/style.scss
@@ -17,8 +17,8 @@ div, div:before, div:after {
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100vmin;
+  width: 100vmin;
   display: flex;
   justify-content: center;
   align-items: center; 
@@ -43,6 +43,7 @@ $board-h: 0vmin;
 div.sticky {
     width: 100vmin;
     height: 80vmin;
+    left: -1vmin;
     display: flex;
     //border: solid 10px $test;
     margin: 0 auto;
