--- a/2023-04/style.css
+++ b/2023-04/style.css
@@ -1,4 +1,91 @@
-*, *:before, *:after {
+@charset "UTF-8";
+div, div:before, div:after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  margin: 0 auto;
+  background: radial-gradient(ellipse, #bfdaf9 15vmin, transparent 1vmin) calc(0vmin + 45vmin) calc(0vmin + 25vmin)/30vmin 20vmin no-repeat, radial-gradient(ellipse, #bfdaf9 20vmin, transparent 1vmin) calc(0vmin + 25vmin) calc(0vmin + 35vmin)/40vmin 20vmin no-repeat, radial-gradient(ellipse, #bfdaf9 20vmin, transparent 1vmin) calc(0vmin + 15vmin) calc(0vmin + 17vmin)/40vmin 20vmin no-repeat, radial-gradient(ellipse, #bfdaf9 20vmin, transparent 1vmin) calc(0vmin + 0vmin) calc(0vmin + 25vmin)/40vmin 20vmin no-repeat, radial-gradient(ellipse, #bfdaf9 25vmin, transparent 1vmin) calc(0vmin + 90vmin) calc(0vmin + -5vmin)/50vmin 30vmin no-repeat, radial-gradient(ellipse, #bfdaf9 15vmin, transparent 1vmin) calc(0vmin + 70vmin) calc(0vmin + 5vmin)/30vmin 20vmin no-repeat, radial-gradient(ellipse, #bfdaf9 20vmin, transparent 1vmin) calc(0vmin + 75vmin) calc(0vmin + 15vmin)/40vmin 20vmin no-repeat, radial-gradient(ellipse, #bfdaf9 20vmin, transparent 1vmin) calc(0vmin + 95vmin) calc(0vmin + 21vmin)/40vmin 20vmin no-repeat, radial-gradient(ellipse, #bfdaf9 20vmin, transparent 1vmin) calc(0vmin + 115vmin) calc(0vmin + 16vmin)/40vmin 20vmin no-repeat, radial-gradient(#bfdaf9, #62a4ef);
+}
+
+div, div:before, div:after {
+  display: block;
+  content: "";
+  position: absolute;
+  box-sizing: border-box;
+}
+
+div.crawl {
+  width: 100vmin;
+  height: 100vmin;
+  position: relative;
+  margin: 0 auto;
+  display: block;
+  justify-content: center;
+  align-items: end;
+  background: linear-gradient(90deg, #111 15vmin, transparent 1vmin) calc(0vmin + 31.5vmin) calc(0vmin + 6.5vmin)/0.5vmin 17vmin no-repeat, linear-gradient(90deg, #111 15vmin, transparent 1vmin) calc(0vmin + 27vmin) calc(0vmin + 10.5vmin)/0.5vmin 14vmin no-repeat, linear-gradient(-15deg, transparent 9vmin, #222 9vmin, #222 10vmin, #000 10vmin, #000 20vmin, #444 21vmin, #444 21vmin, transparent 21vmin) calc(0vmin + 0vmin) calc(0vmin + 43.5vmin)/35vmin 35vmin no-repeat, linear-gradient(90deg, #08274b 15vmin, transparent 1vmin) calc(0vmin + 0vmin) calc(0vmin + 32vmin)/2vmin 85vmin no-repeat, linear-gradient(90deg, #08274b 15vmin, transparent 1vmin) calc(0vmin + 31.5vmin) calc(0vmin + 24vmin)/3.5vmin 85vmin no-repeat, linear-gradient(-15deg, transparent 10vmin, #08274b 10vmin, #08274b 15vmin, transparent 15vmin) calc(0vmin + 0vmin) calc(0vmin + 13vmin)/35vmin 25vmin no-repeat, repeating-linear-gradient(90deg, transparent 0vmin, transparent 2.75vmin, #030f1d 2.75vmin, #0a3362 3vmin) calc(0vmin + 0vmin) calc(0vmin + 31vmin)/35vmin 80vmin no-repeat, repeating-linear-gradient(-15deg, transparent 0vmin, transparent 3.25vmin, #030f1d 3.75vmin, #1364bf 4vmin) calc(0vmin + 0vmin) calc(0vmin + 30vmin)/35vmin 80vmin no-repeat, linear-gradient(-15deg, #133955 0vmin, #133955 80vmin, transparent 1vmin) calc(0vmin + 0vmin) calc(0vmin + 6vmin)/35vmin 100vmin no-repeat, linear-gradient(15deg, transparent 19vmin, #222 19vmin, #222 20vmin, #000 20vmin, #000 30vmin, #444 31vmin, #444 31vmin, transparent 31vmin) calc(35vmin + 0vmin) calc(0vmin + 34vmin)/55vmin 55vmin no-repeat, linear-gradient(90deg, #08274b 15vmin, transparent 1vmin) calc(35vmin + 0vmin) calc(0vmin + 27vmin)/3.5vmin 85vmin no-repeat, linear-gradient(90deg, #08274b 15vmin, transparent 1vmin) calc(35vmin + 52.5vmin) calc(0vmin + 39vmin)/2.25vmin 85vmin no-repeat, linear-gradient(15deg, transparent 20vmin, #08274b 20vmin, #08274b 25vmin, transparent 25vmin) calc(35vmin + 0vmin) calc(0vmin + 19vmin)/55vmin 30vmin no-repeat, repeating-linear-gradient(90deg, transparent 0vmin, transparent 2.75vmin, #030f1d 2.75vmin, #0a3362 3vmin) calc(35vmin + 0vmin) calc(0vmin + 37vmin)/55vmin 80vmin no-repeat, repeating-linear-gradient(15deg, transparent 0vmin, transparent 3.25vmin, #030f1d 3.75vmin, #1364bf 4vmin) calc(35vmin + 0vmin) calc(0vmin + 35vmin)/55vmin 80vmin no-repeat, linear-gradient(15deg, #133955 0vmin, #133955 80vmin, transparent 1vmin) calc(35vmin + 0vmin) calc(0vmin + 5.5vmin)/55vmin 100vmin no-repeat;
+}
+
+div.crawl:before,
+div.crawl:after {
+  color: #f6cb7c;
+  font-size: 6vmin;
+  font-family: "Teko", sans-serif;
+  text-wrap: nowrap;
+  text-transform: uppercase;
+  text-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  overflow: hidden;
+}
+
+div.crawl:before {
+  width: 34vmin;
+  height: 12vmin;
+  padding-top: 2vmin;
+  padding-left: 0vmin;
+  top: 62vmin;
+  left: 0vmin;
+  transform: skew(0, -15deg);
+  white-space: nowrap;
+  content: "ng News: It is Divtober!";
+}
+
+div.crawl:after {
+  width: 55vmin;
+  height: 12vmin;
+  padding-top: 2vmin;
+  padding-left: 0vmin;
+  top: 65vmin;
+  left: 36vmin;
+  transform: skew(0, 15deg);
+  content: "ober! –––  Breaking News: It is Divtober!";
+}
+
+@keyframes move-left-crawl {
+  0% {
+    padding-left: 30vmin;
+  }
+  100% {
+    padding-left: 0vmin;
+  }
+}
+@keyframes move-right-crawl {
+  0% {
+    padding-left: 0vmin;
+  }
+  100% {
+    padding-left: -235vmin;
+  }
+}
+
+
+/* div, div:before, div:after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -12,7 +99,7 @@ body {
   background: repeating-linear-gradient(90deg, transparent 0 80px, #a8cdf6 80px 82px), repeating-linear-gradient(-10deg, transparent 0 90px, #a8cdf6 90px 92px), conic-gradient(from 167.72deg at 50.06% 45.46%, #133955 -54.38deg, #344275 7.33deg, #6F357D 84.38deg, #30297D 138.99deg, #213A57 168.75deg, #290755 205.87deg, #0C4A47 264.38deg, #133955 305.62deg, #344275 367.33deg);
 }
 
-*, *:before, *:after {
+div, div:before, div:after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -69,4 +156,4 @@ div.crawl:after {
   100% {
     left: -140vw;
   }
-}
+} */
