--- a/2023-19/style.css
+++ b/2023-19/style.css
@@ -6,8 +6,8 @@ div, div:before, div:after {
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100vmin;
+  width: 100vmin;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,6 +17,7 @@ body {
 div.sticky {
   width: 100vmin;
   height: 80vmin;
+  left: -1vmin;
   display: flex;
   margin: 0 auto;
   position: relative;
