--- a/2023-27/style.scss
+++ b/2023-27/style.scss
@@ -56,6 +56,8 @@ div.rules {
     height: 90vmin;
     display: flex;
     opacity: 0.8;
+
+    left: -1.5vmin;
     //transform: scale(1.5);
     border: solid 3px $black;
     margin: 0 auto;
