--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ main.grid {
 }
 
 
+main.grid a {
+  margin: 0 auto;
+  display: block;
+}
+
+
 iframe {
   background-color:#eaeaea;
   border:solid 5vmin #444;
@@ -50,6 +56,7 @@ iframe {
   text-align: center;  
   aspect-ratio: 16/9;
   min-height: 70vmin;
+  max-width: 100vmin;
 }
 iframe:before {
     border-radius:2px;
@@ -73,13 +80,13 @@ iframe:after {
 }
 
 
-@media (max-width: 800px) {
+@media (max-width: 1100px) {
   main.grid {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 1100px) {
   iframe {
     min-height: 80vmin;
   }
